SERVER-82204 Make classic $first/$last window functions generate null on missing input